--- a/package.json
+++ b/package.json
@@ -25,16 +25,19 @@
     "build:web": "tsc && vite build",
     "preview": "vite preview",
     "cli:find-port": "tsx src/cli/index.ts find-port",
-    "prepublishOnly": "pnpm run build"
+    "cli:calibrate": "tsx src/cli/index.ts calibrate",
+    "prepublishOnly": "pnpm run build",
+    "install-global": "pnpm run build && npm link"
   },
   "dependencies": {
+    "log-update": "^6.1.0",
     "serialport": "^12.0.0"
   },
   "devDependencies": {
-    "typescript": "~5.8.3",
-    "vite": "^6.3.5",
+    "@types/node": "^22.10.5",
     "tsx": "^4.19.2",
-    "@types/node": "^22.10.5"
+    "typescript": "~5.8.3",
+    "vite": "^6.3.5"
   },
   "repository": {
     "type": "git",
