--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "lerobot"
   ],
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --mode demo",
+    "dev:vanilla": "vite --mode vanilla",
+    "dev:lib": "vite --mode lib",
     "build": "pnpm run build:cli",
     "build:cli": "tsc --project tsconfig.cli.json",
-    "build:web": "tsc && vite build",
+    "build:web": "tsc && vite build --mode lib",
+    "build:demo": "tsc && vite build --mode demo",
     "preview": "vite preview",
     "cli:find-port": "tsx src/cli/index.ts find-port",
     "cli:calibrate": "tsx src/cli/index.ts calibrate",
@@ -35,6 +38,18 @@
   },
   "devDependencies": {
     "@types/node": "^22.10.5",
+    "@types/react": "^18.2.79",
+    "@types/react-dom": "^18.2.25",
+    "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.19",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.400.0",
+    "postcss": "^8.4.38",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss": "^3.4.0",
     "tsx": "^4.19.2",
     "typescript": "~5.8.3",
     "vite": "^6.3.5"
