--- a/docs/hf_config.yml
+++ b/docs/hf_config.yml
@@ -4,7 +4,7 @@ emoji: 🤖
 colorFrom: blue
 colorTo: green
 sdk: static
-app_build_command: pnpm run build
+app_build_command: npm run build
 app_file: dist/index.html
 pinned: true
 ---
