--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.0",
   "description": "State-of-the-art AI for real-world robotics in JS",
   "type": "module",
+  "workspaces": [
+    "packages/*"
+  ],
   "bin": {
     "lerobot": "./dist/cli/index.js"
   },
@@ -30,16 +33,21 @@
     "cli:find-port": "tsx src/cli/index.ts find-port",
     "cli:calibrate": "tsx src/cli/index.ts calibrate",
     "cli:teleoperate": "tsx src/cli/index.ts teleoperate",
+    "changeset": "changeset",
+    "changeset:version": "changeset version",
+    "changeset:publish": "changeset publish",
     "prepublishOnly": "pnpm run build",
     "install-global": "pnpm run build && npm link"
   },
   "dependencies": {
+    "@lerobot/web": "^0.1.1",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-progress": "^1.1.7",
     "log-update": "^6.1.0",
     "serialport": "^12.0.0"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.29.5",
     "@types/node": "^22.10.5",
     "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.25",
