feat: improved things around calibrate, findPort (added web usb back)

--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "dev": "vite --mode demo",
     "dev:vanilla": "vite --mode vanilla",
     "dev:lib": "vite --mode lib",
+    "test-dev": "vite --mode test",
     "build": "pnpm run build:cli",
     "build:cli": "tsc --project tsconfig.cli.json",
     "build:web": "tsc && vite build --mode lib",
     "build:demo": "tsc && vite build --mode demo",
+    "build:test": "tsc && vite build --mode test",
     "preview": "vite preview",
     "cli:find-port": "tsx src/cli/index.ts find-port",
     "cli:calibrate": "tsx src/cli/index.ts calibrate",
