feat: added cyberpunk into build & used as main demo

--- a/package.json
+++ b/package.json
@@ -23,14 +23,11 @@
   ],
   "scripts": {
     "dev": "vite --mode demo",
-    "dev:vanilla": "vite --mode vanilla",
-    "dev:lib": "vite --mode lib",
-    "test-dev": "vite --mode test",
+    "example:cyberpunk": "vite --mode cyberpunk",
     "build": "pnpm run build:cli",
     "build:cli": "tsc --project tsconfig.cli.json",
-    "build:web": "tsc && vite build --mode lib",
     "build:demo": "tsc && vite build --mode demo",
-    "build:test": "tsc && vite build --mode test",
+    "build:cyberpunk": "tsc && vite build --mode cyberpunk",
     "preview": "vite preview",
     "cli:find-port": "tsx src/cli/index.ts find-port",
     "cli:calibrate": "tsx src/cli/index.ts calibrate",
