--- a/docs/hf_config.yml
+++ b/docs/hf_config.yml
@@ -4,8 +4,8 @@ emoji: 🤖
 colorFrom: blue
 colorTo: green
 sdk: static
-app_build_command: npx vite build --mode demo
-app_file: dist/demo/index.html
+app_build_command: npx vite build --mode cyberpunk
+app_file: dist/cyberpunk/index.html
 pinned: true
 ---
 
