--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
   ],
   "scripts": {
     "dev": "vite --mode demo",
-    "example:cyberpunk": "vite --mode cyberpunk",
+    "example:cyberpunk": "cd examples/cyberpunk-standalone && pnpm dev",
     "build": "pnpm run build:cli",
     "build:cli": "tsc --project tsconfig.cli.json",
     "build:demo": "tsc && vite build --mode demo",
-    "build:cyberpunk": "tsc && vite build --mode cyberpunk",
+    "build:cyberpunk": "cd examples/cyberpunk-standalone && pnpm install && pnpm build",
     "preview": "vite preview",
     "cli:find-port": "tsx src/cli/index.ts find-port",
     "cli:calibrate": "tsx src/cli/index.ts calibrate",
@@ -48,16 +48,16 @@
   "devDependencies": {
     "@changesets/cli": "^2.29.5",
     "@types/node": "^22.10.5",
-    "@types/react": "^18.2.79",
-    "@types/react-dom": "^18.2.25",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.19",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.400.0",
     "postcss": "^8.4.38",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss": "^3.4.0",
     "tsx": "^4.19.2",
