add teleoperation recording with LeRobot dataset format support

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-progress": "^1.1.7",
     "log-update": "^6.1.0",
+    "parquetjs": "^0.11.2",
     "serialport": "^12.0.0"
   },
   "devDependencies": {
