--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "install-global": "pnpm run build && npm link"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.850.0",
+    "@aws-sdk/lib-storage": "^3.850.0",
     "@lerobot/web": "workspace:*",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-progress": "^1.1.7",
