--- a/package.json
+++ b/package.json
@@ -4,15 +4,8 @@
   "description": "State-of-the-art AI for real-world robotics in JS",
   "type": "module",
   "workspaces": [
-    "packages/*",
-    "examples/cyberpunk-standalone",
-    "examples/iframe-dialog-test",
-    "examples/test-sequential-operations"
+    "packages/*"
   ],
-  "bin": {
-    "lerobot": "./dist/cli/index.js"
-  },
-  "main": "./dist/lerobot/find_port.js",
   "files": [
     "dist/**/*",
     "README.md"
@@ -25,18 +18,15 @@
     "lerobot"
   ],
   "scripts": {
-    "dev": "vite --mode demo",
+    "cli:find-port": "tsx src/cli/index.ts find-port",
+    "cli:calibrate": "tsx src/cli/index.ts calibrate",
+    "cli:teleoperate": "tsx src/cli/index.ts teleoperate",
     "example:cyberpunk": "cd examples/cyberpunk-standalone && pnpm dev",
     "example:iframe-test": "cd examples/iframe-dialog-test && pnpm dev",
     "example:sequential-test": "cd examples/test-sequential-operations && pnpm dev",
     "build": "pnpm run build:cli",
     "build:cli": "tsc --project tsconfig.cli.json",
-    "build:demo": "tsc && vite build --mode demo",
     "build:cyberpunk": "cd examples/cyberpunk-standalone && pnpm install && pnpm build",
-    "preview": "vite preview",
-    "cli:find-port": "tsx src/cli/index.ts find-port",
-    "cli:calibrate": "tsx src/cli/index.ts calibrate",
-    "cli:teleoperate": "tsx src/cli/index.ts teleoperate",
     "changeset": "changeset",
     "changeset:version": "changeset version",
     "changeset:publish": "changeset publish",
@@ -45,29 +35,14 @@
   },
   "dependencies": {
     "@lerobot/web": "workspace:*",
-    "@radix-ui/react-dialog": "^1.1.14",
-    "@radix-ui/react-progress": "^1.1.7",
     "log-update": "^6.1.0",
     "serialport": "^12.0.0"
   },
   "devDependencies": {
     "@changesets/cli": "^2.29.5",
     "@types/node": "^22.10.5",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
-    "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.19",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "lucide-react": "^0.400.0",
-    "postcss": "^8.4.38",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "tailwind-merge": "^2.3.0",
-    "tailwindcss": "^3.4.0",
     "tsx": "^4.19.2",
-    "typescript": "~5.8.3",
-    "vite": "^6.3.5"
+    "typescript": "~5.8.3"
   },
   "repository": {
     "type": "git",
