--- a/tsconfig.cli.json
+++ b/tsconfig.cli.json
@@ -11,11 +11,5 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["src/lerobot/**/*", "src/cli/**/*"],
-  "exclude": [
-    "src/main.ts",
-    "src/counter.ts",
-    "src/style.css",
-    "src/vite-env.d.ts"
-  ]
+  "include": ["src/lerobot/**/*", "src/cli/**/*"]
 }
