--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -44,10 +44,10 @@
     "test:coverage": "vitest run --coverage"
   },
   "devDependencies": {
-    "@vitest/ui": "^2.0.0",
-    "jsdom": "^24.0.0",
+    "@vitest/ui": "^2.1.9",
+    "jsdom": "^24.1.3",
     "vite": "^6.3.5",
-    "vitest": "^2.0.0"
+    "vitest": "^2.1.9"
   },
   "peerDependencies": {
     "typescript": ">=4.5.0"
@@ -62,13 +62,11 @@
     "access": "public"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.850.0",
-    "@aws-sdk/lib-storage": "^3.850.0",
+    "@aws-sdk/client-s3": "^3.856.0",
+    "@aws-sdk/lib-storage": "^3.856.0",
     "@huggingface/hub": "^2.4.0",
     "apache-arrow": "^21.0.0",
     "jszip": "^3.10.1",
-    "parquet-wasm": "^0.6.1",
-    "three": "^0.178.0",
-    "urdf-loader": "^0.12.6"
+    "parquet-wasm": "^0.6.1"
   }
 }
