--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -36,6 +36,7 @@
   ],
   "scripts": {
     "build": "tsc --project tsconfig.build.json",
+    "watch": "tsc --project tsconfig.build.json --watch",
     "prepublishOnly": "npm run build",
     "dev": "vitest --watch",
     "test": "vitest run",
@@ -43,10 +44,10 @@
     "test:coverage": "vitest run --coverage"
   },
   "devDependencies": {
-    "vitest": "^2.0.0",
-    "@vitest/ui": "^2.0.0",
-    "jsdom": "^24.0.0",
-    "vite": "^6.3.5"
+    "@vitest/ui": "^2.1.9",
+    "jsdom": "^24.1.3",
+    "vite": "^6.3.5",
+    "vitest": "^2.1.9"
   },
   "peerDependencies": {
     "typescript": ">=4.5.0"
@@ -59,5 +60,13 @@
   "author": "Tim Pietrusky",
   "publishConfig": {
     "access": "public"
+  },
+  "dependencies": {
+    "@aws-sdk/client-s3": "^3.856.0",
+    "@aws-sdk/lib-storage": "^3.856.0",
+    "@huggingface/hub": "^2.4.0",
+    "apache-arrow": "^21.0.0",
+    "jszip": "^3.10.1",
+    "parquet-wasm": "^0.6.1"
   }
 }
