--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -37,6 +37,8 @@
   "scripts": {
     "build": "vite build",
     "dev": "vite build --watch",
+    "lint": "eslint src --ext .ts,.tsx --report-unused-disable-directives --max-warnings 0",
+    "lint:fix": "eslint src --ext .ts,.tsx --fix",
     "prepublishOnly": "npm run build",
     "test": "vitest run",
     "test:ui": "vitest --ui",
@@ -46,12 +48,15 @@
     "serialport": "^12.0.0"
   },
   "devDependencies": {
-    "vitest": "^2.0.0",
+    "@types/node": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.41.0",
+    "@typescript-eslint/parser": "^8.41.0",
     "@vitest/ui": "^2.0.0",
+    "eslint": "^9.34.0",
+    "typescript": "^5.3.0",
     "vite": "^6.3.5",
     "vite-node": "^2.0.0",
-    "typescript": "^5.3.0",
-    "@types/node": "^18.0.0"
+    "vitest": "^2.0.0"
   },
   "peerDependencies": {
     "typescript": ">=4.5.0"
