--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -36,6 +36,8 @@
   ],
   "scripts": {
     "build": "tsc --project tsconfig.build.json",
+    "lint": "eslint src --ext .ts,.tsx --report-unused-disable-directives --max-warnings 0",
+    "lint:fix": "eslint src --ext .ts,.tsx --fix",
     "prepublishOnly": "npm run build",
     "dev": "vitest --watch",
     "test": "vitest run",
@@ -43,6 +45,10 @@
     "test:coverage": "vitest run --coverage"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "eslint": "^8.0.0",
+    "typescript": "^5.3.0",
     "vitest": "^2.0.0",
     "@vitest/ui": "^2.0.0",
     "jsdom": "^24.0.0",
