feat: added node support (#8)
* feat: change everything

* feat: update example; added proper docs; aligned both web and node packages

--- a/package.json
+++ b/package.json
@@ -6,10 +6,7 @@
   "workspaces": [
     "packages/*"
   ],
-  "files": [
-    "dist/**/*",
-    "README.md"
-  ],
+  "private": true,
   "keywords": [
     "robotics",
     "ai",
@@ -18,14 +15,13 @@
     "lerobot"
   ],
   "scripts": {
-    "cli:find-port": "tsx src/cli/index.ts find-port",
-    "cli:calibrate": "tsx src/cli/index.ts calibrate",
-    "cli:teleoperate": "tsx src/cli/index.ts teleoperate",
     "example:cyberpunk": "cd examples/cyberpunk-standalone && pnpm dev",
     "example:iframe-test": "cd examples/iframe-dialog-test && pnpm dev",
     "example:sequential-test": "cd examples/test-sequential-operations && pnpm dev",
-    "build": "pnpm run build:cli",
-    "build:cli": "tsc --project tsconfig.cli.json",
+    "dev": "pnpm run dev:node",
+    "dev:node": "pnpm -C packages/node dev",
+    "dev:cli": "pnpm -C packages/cli dev",
+    "build:all": "pnpm -C packages/node build && pnpm -C packages/cli build",
     "build:cyberpunk": "cd examples/cyberpunk-standalone && pnpm install && pnpm build",
     "changeset": "changeset",
     "changeset:version": "changeset version",
