--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -26,7 +26,7 @@
     "test": "echo 'No tests defined'"
   },
   "dependencies": {
-    "@lerobot/node": "file:../node",
+    "@lerobot/node": "workspace:*",
     "chalk": "^5.3.0",
     "commander": "^11.0.0",
     "serialport": "^12.0.0"
